Fixing the weird spacing around the episode list.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -188,6 +188,7 @@ h1 {
 
 .rss-credit {
   font-size: 8px;
+  margin-top: 10px;
 }
 
 .biobuttons {
